feat: Added search query param to categories and products
